--- a/css/style.css
+++ b/css/style.css
@@ -104,31 +104,52 @@ color: #2e2f42;
   margin-right: 100px;
 }
 
-.header-menu-item-studio {
+.header-menu-item {
 color: var(--NAVY-BLUE, #2E2F42);
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5; 
 letter-spacing: 0.02em;
 padding: 24p 0;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+position: relative;
 }
-
-.header-menu-item-studio:hover {
+ 
+.header-menu-item:first-child .header-menu-link {
   color: #404bbf;
 }
-.header-menu-item-studio:focus {
+
+.header-menu-item:first-child .header-menu-link::after {
+  display: block; 
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background: #404bbf;
+  width: 100%;
+  border-radius: 2px;
+}
+
+.header-menu-item:hover {
+  color: #404bbf;
+}
+.header-menu-item:focus {
   color: #404bbf;
 }
 
 .header-menu-link {
-display: block; 
-color: var(--NAVY-BLUE, #2E2F42);
+ color: var(--NAVY-BLUE, #2E2F42);
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5; 
 letter-spacing: 0.02em;
 padding: 24px 0;
 }
+
+  ::after {
+    box-sizing: border-box;
+  }
 
 .header-menu-link:hover {
   color: #404BBF
@@ -183,6 +204,12 @@ letter-spacing: 0.02em;
 
 .hero {
   background: var(--NAVY-BLUE, #2E2F42);
+  background-image: linear-gradient(var(--GREY, rgba(46, 47, 66, 0.70)), var(--GREY, rgba(46, 47, 66, 0.70))), url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1440;
+  margin: 0 auto;
   padding: 188px 0;
 }
 
@@ -193,6 +220,8 @@ letter-spacing: 0.02em;
   flex-shrink: 0;
   text-align: center;
   gap: 48px;
+ 
+
  }
 
 .hero-title {
@@ -263,6 +292,14 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 }
 
+.features-icon-box {
+  border-radius: 4px;
+border: 1px solid var(--LIGHT-SLATE, #8E8F99);
+background: var(--CLOUD, #F4F4FD);
+padding: 24px 100px;
+margin-bottom: 8px;
+}
+
 /* team */
 
 .team {
@@ -293,6 +330,7 @@ margin-bottom: 72px;
   text-align: center;
   width: calc((100% - 24px * 3) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08)
 }
 
 .team-img {
@@ -304,6 +342,22 @@ margin-bottom: 72px;
   background: var(--WHITE, #FFF);
 box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
+
+.team-social-networks {
+  display: flex;
+  gap: 24px;
+  margin-right: 16px;
+  margin-left: 16px;
+}
+
+.team-soc-icon {
+  width: 40px;
+  height: 40px;
+  padding: 12px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+
 
 .team-name {
 color: var(--NAVY-BLUE, #2E2F42);
@@ -350,10 +404,47 @@ margin-bottom: 72px;
 
 .portfolio-item {
   width: calc((100% - 24px * 2) / 3);
+
+  
+}
+
+.portfolio-item:hover .portfolio-text-wrap{
+  transform: translateY(0);
+}
+
+.portfolio-cover-wrap {
+  position: relative;
+  overflow: hidden;
 }
 
 .portfolio-img {
   
+}
+
+.portfolio-text-wrap {
+  position: absolute;
+  height: 100%;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  background: var(--IRIS, #4D5AE5);
+  transform: translateY(100%);
+  transition: transform 300ms liner;
+}
+
+.portfolio-cover-text {
+ 
+  color: var(--CLOUD, #F4F4FD);
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 1.5; 
+letter-spacing: 0.02em;
+
+
 }
 
 .port-serv-descr {
@@ -416,4 +507,50 @@ font-weight: 400;
 line-height: 1.5; 
 letter-spacing: 0.02em;
 max-width: 264px;
+}
+
+.footer-social-box {
+  align-items: center;
+}
+
+.footer-social {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+}
+
+.footer-soc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding-left: 0;
+}
+
+.footer-soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-soc-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4D5AE5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-soc-link:hover,
+.footer-soc-link:focus {
+  background-color: #31d0aa;
+}
+
+.svg-footer {
+  fill: #f4f4fd;
 }
