--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ img {
 
 .header {
   border-bottom: 1px solid var(--CORNFLOWER, #E7E9FC);
-
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
 }
 
 .header-container {
@@ -111,12 +111,14 @@ font-weight: 500;
 line-height: 1.5; 
 letter-spacing: 0.02em;
 padding: 24p 0;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-position: relative;
+
+
 }
  
 .header-menu-item:first-child .header-menu-link {
   color: #404bbf;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-item:first-child .header-menu-link::after {
@@ -183,6 +185,7 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.5; 
 letter-spacing: 0.02em;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .header-social-link:hover {
@@ -208,7 +211,7 @@ letter-spacing: 0.02em;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 1440;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 188px 0;
 }
@@ -251,6 +254,7 @@ background: var(--IRIS, #4D5AE5);
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 border: 0;
 min-width: 169px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-buy-btn:hover,
@@ -293,6 +297,10 @@ letter-spacing: 0.02em;
 }
 
 .features-icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
   border-radius: 4px;
 border: 1px solid var(--LIGHT-SLATE, #8E8F99);
 background: var(--CLOUD, #F4F4FD);
@@ -403,39 +411,33 @@ margin-bottom: 72px;
 }
 
 .portfolio-item {
+  
+  
+  
   width: calc((100% - 24px * 2) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   
 }
 
-.portfolio-item:hover .portfolio-text-wrap{
+.portfolio-item:hover .portfolio-cover-text{
+  
   transform: translateY(0);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-cover-wrap {
   position: relative;
   overflow: hidden;
+  
 }
 
 .portfolio-img {
   
 }
 
-.portfolio-text-wrap {
-  position: absolute;
-  height: 100%;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 40px;
-  background: var(--IRIS, #4D5AE5);
-  transform: translateY(100%);
-  transition: transform 300ms liner;
-}
-
 .portfolio-cover-text {
- 
+  position: absolute;
   color: var(--CLOUD, #F4F4FD);
 font-family: Roboto;
 font-size: 16px;
@@ -443,6 +445,15 @@ font-style: normal;
 font-weight: 400;
 line-height: 1.5; 
 letter-spacing: 0.02em;
+height: 100%;
+top: 0;
+display: flex;
+align-items: center;
+justify-content: center;
+padding: 40px;
+background: var(--IRIS, #4D5AE5);
+transform: translateY(100%);
+transition: transform 300ms liner;
 
 
 }
