--- a/css/style.css
+++ b/css/style.css
@@ -353,9 +353,10 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 .team-social-networks {
   display: flex;
+  justify-content: center;
   gap: 24px;
-  margin-right: 16px;
   margin-left: 16px;
+  margin-right: 16px;
 }
 
 .team-soc-icon {
@@ -420,8 +421,7 @@ margin-bottom: 72px;
   
 }
 
-.portfolio-item:hover .portfolio-cover-text{
-  
+.portfolio-item:hover .portfolio-cover-text {
   transform: translateY(0);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
@@ -429,7 +429,6 @@ margin-bottom: 72px;
 .portfolio-cover-wrap {
   position: relative;
   overflow: hidden;
-  
 }
 
 .portfolio-img {
@@ -450,10 +449,10 @@ top: 0;
 display: flex;
 align-items: center;
 justify-content: center;
-padding: 40px;
+padding: 40px 32px;
 background: var(--IRIS, #4D5AE5);
 transform: translateY(100%);
-transition: transform 300ms liner;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
