--- a/css/style.css
+++ b/css/style.css
@@ -359,12 +359,31 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
   margin-right: 16px;
 }
 
-.team-soc-icon {
+.team-soc-net-list {
   width: 40px;
   height: 40px;
-  padding: 12px;
+}
+
+.team-soc-net-link {
+  width: 100%;
+  height: 100%;
   background-color: #4d5ae5;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.team-soc-net-link:hover 
+.team-soc-net-link:focus {
+  background-color: #404bbf;
+}
+
+.team-soc-icon {
+ padding: 12px;
+ fill: #f4f4fd;
+ 
 }
 
 
