--- a/css/style.css
+++ b/css/style.css
@@ -375,7 +375,7 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 
 }
 
-.team-soc-net-link:hover 
+.team-soc-net-link:hover, 
 .team-soc-net-link:focus {
   background-color: #404bbf;
 }
@@ -509,7 +509,12 @@ letter-spacing: 0.02em;
 }
 
 .footer-container {
- flex-shrink: 0;
+ display: flex;
+ align-items: baseline;
+}
+
+.footer-container-box {
+  margin-right: 120px;
 }
 
 .footer-logo{
@@ -553,8 +558,6 @@ max-width: 264px;
 
 .footer-soc {
   display: flex;
-  justify-content: center;
-  align-items: center;
   gap: 16px;
   padding-left: 0;
 }
