--- a/css/style.css
+++ b/css/style.css
@@ -583,10 +583,7 @@ max-width: 264px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-soc-link:hover {
-  background-color: #31d0aa;
-}
-
+.footer-soc-link:hover,
 .footer-soc-link:focus {  
   background-color: #31d0aa;
 }
