--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,7 @@ p, h1, h2, h3, h4, h5, h6 {
 }
 
 ul {
+  list-style: none;
   margin-top: 0;
   margin-bottom: 0;
   padding-left: 0;
@@ -382,7 +383,6 @@ box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47,
 }
 
 .team-soc-icon {
- padding: 12px;
  fill: #f4f4fd;
  
 }
