--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ background-color: #FFFFFF;
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
-  outline: 2px solid red ;
 }
 
 .section {
@@ -111,18 +110,17 @@ font-size: 16px;
 font-weight: 500;
 line-height: 1.5; 
 letter-spacing: 0.02em;
-padding: 24p 0;
 
 
 }
  
-.header-menu-item:first-child .header-menu-link {
+.header-menu-link.current {
   color: #404bbf;
   position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 
-.header-menu-item:first-child .header-menu-link::after {
+.header-menu-link.current::after {
   display: block; 
   content: '';
   position: absolute;
@@ -142,12 +140,14 @@ padding: 24p 0;
 }
 
 .header-menu-link {
+  display: block;
  color: var(--NAVY-BLUE, #2E2F42);
 font-size: 16px;
 font-weight: 500;
 line-height: 1.5; 
 letter-spacing: 0.02em;
 padding: 24px 0;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
   ::after {
@@ -305,7 +305,7 @@ letter-spacing: 0.02em;
   border-radius: 4px;
 border: 1px solid var(--LIGHT-SLATE, #8E8F99);
 background: var(--CLOUD, #F4F4FD);
-padding: 24px 100px;
+padding: 24px 0px;
 margin-bottom: 8px;
 }
 
@@ -348,8 +348,7 @@ margin-bottom: 72px;
 .name-pos {
   padding-top: 32px;
   padding-bottom: 32px;
-  background: var(--WHITE, #FFF);
-box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
 }
 
 .team-social-networks {
@@ -402,7 +401,8 @@ color: var(--SLATE, #434455);
 font-size: 16px;
 font-weight: 400;
 line-height: 1.5; 
-letter-spacing: 0.02em; 
+letter-spacing: 0.02em;
+margin-bottom: 32px; 
 }
 
 /* Portfolio */
@@ -470,9 +470,6 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 height: 100%;
 top: 0;
-display: flex;
-align-items: center;
-justify-content: center;
 padding: 40px 32px;
 background: var(--IRIS, #4D5AE5);
 transform: translateY(100%);
